--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGODB_URL = "mongodb+srv://rishabhguptajs:Rishabh05@cluster0.tcupbtk.mongodb.net/?retryWrites=true&w=majority"
+MONGODB_URL = "mongodb+srv://rishabhguptajs:<password>@cluster0.ogy3o3f.mongodb.net/?retryWrites=true&w=majority"
